# noumead

./: Cargo.toml  README.md
.github/workflows/: build.yaml  clippy.yaml
examples/: busybox.nomad  example.nomad  param.nomad
src/: cli.rs  error.rs  helper.rs  inquiry.rs  log.rs  main.rs  rest.rs
src/cli/: dispatch.rs  mod.rs  stop.rs
src/nomad/: alloc.rs  dispatch.rs  job.rs  mod.rs  spec.rs  stream.rs
