[package]
name = "noumead"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
inquire = "0.5.2"
serde_json = "1.0"
base64 = "0.20.0"
async-trait = "0.1.60"
crossterm = "0.25.0"
